<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="16dp"
        android:paddingRight="0dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        tools:context=".SignupActivity">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/signup_first_nameEt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/pets" />

            <EditText
                android:id="@+id/signup_emailEt"
                android:layout_width="251dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/editstyletext"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/signup_passwordEt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_last_nameEt" />

            <EditText
                android:id="@+id/signup_passwordEt"
                android:layout_width="251dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/editstyletext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/signup_password-repeatEt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_emailEt" />

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/signup"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_upload_photo" />

            <EditText
                android:id="@+id/signup_password-repeatEt"
                android:layout_width="251dp"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/editstyletext"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/signup_phoneEt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_passwordEt" />

            <EditText
                android:id="@+id/signup_first_nameEt"
                android:layout_width="251dp"
                android:layout_height="45dp"
                android:background="@drawable/editstyletext"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/signup_last_nameEt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/signup_last_nameEt"
                android:layout_width="251dp"
                android:layout_height="42dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/editstyletext"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorPrimaryDark"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/signup_emailEt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_first_nameEt" />

            <EditText
                android:id="@+id/signup_phoneEt"
                android:layout_width="251dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/editstyletext"
                android:ems="10"
                android:focusable="true"
                android:hint="Phone"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/signup_upload_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.52"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_password-repeatEt" />

            <Button
                android:id="@+id/signup_upload_photo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:background="@drawable/buttonstyle"
                android:text="@string/upload_photo"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/signupBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_phoneEt" />

            <CheckBox
                android:id="@+id/signup_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:clickable="false"
                android:focusable="false"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                app:layout_constraintBaseline_toBaselineOf="@id/signup_upload_photo"
                app:layout_constraintStart_toEndOf="@+id/signup_upload_photo" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="40dp"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/signup_signinBtn"
            android:layout_width="500dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:rotation="90"
            android:background="@drawable/sidebuttonstyle"
            android:text="@string/signin"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>